# Techpixel

./: Cargo.toml  README.md  README_RU.md  build_installer.bat  dist-workspace.toml
assets/entities/: entity_registry.json  player.json  sheep.json
assets/models/entity/: sheep_model.json
src/: core.rs  main.rs  screens.rs
src/core/: config.rs  egui_fonts.rs  entity_ai.rs  entity_definition.rs  player.rs  raycast.rs  save_system.rs  screen.rs  screen_manager.rs  upload_worker.rs  user_settings.rs  world_gen.rs
src/core/fluid/: mod.rs
src/core/gameobjects/: block.rs
src/core/vct/: system.rs
src/core/water/: mod.rs
src/core/world_gen/: biome_layer.rs  layers.rs  nature.rs  pipeline.rs  world.rs
src/core/world_gen/layers/: zoom.rs
src/screens/: block_model_renderer.rs  block_preview_renderer.rs  entity_editor.rs  entity_editor_screen.rs  entity_preview_renderer.rs  game_3d_pipeline.rs  game_screen.rs  inventory.rs  inventory_model_renderer.rs  light_emitter_renderer.rs  main_menu.rs  player_renderer.rs  profiler_overlay.rs  settings.rs  sheep_renderer.rs  worldgen_visualizer.rs
src/shaders/: light_emitter.wgsl
wix/: assets.wxs  main.wxs
