[package]
name = "Techpixel"
version = "0.0.1"
edition = "2024"
authors = ["Max A. Vavaev"]
repository = "https://github.com/MaxLegend/QubePixel"

[package.metadata.wix]
upgrade-guid = "F33E1A1F-6BC0-4B52-8419-3AA001B9C2CB"
path-guid = "2711611F-8B16-476A-A2A7-1A81FEB6F19F"
license = false
eula = false

[dependencies]
# Графика и окно
wgpu = "29.0.0"
winit = "0.30"
image = "0.24"

# Математика и мир
glam = "0.24"
noise = "0.8"
rapier3d = "0.32.0"

# Архитектура и UI
hecs = "0.10"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"

# Данные и сохранение
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"
rust-embed = "8.11"

# Системные
rayon = "1.8"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
bytemuck = { version = "1.21", features = ["derive"] }
fern = "0.7.1"
chrono = "0.4.44"
rfd = "0.15"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


